# agblib

./: .gitignore  CMakeLists.txt  README.md
include/: agbfile.h  agbstring.h
src/: agbfile.c  agbstring.c  main.c
